--- a/orion_128/my_extensions/ps2_keyboard_atmega16/russian.html
+++ b/orion_128/my_extensions/ps2_keyboard_atmega16/russian.html
@@ -1,3 +1,9 @@
+<html lang="ru">
+<head>
+<meta charset="utf-8">
+</head>
+<body> 
+
 <h1>Контроллер клавиатуры для ретрокомпьютеров «Орион 128» и «Радио 86РК».</h1>
 
 <h2>Лицензионное соглашение</h2>
@@ -10,9 +16,9 @@
 
 <h2>Фото</h2>
 
-<img src='Печатная плата ATMega16 TQFP/Готовое устройство ATMega16 TQFP (2).jpg'><br><br>
-<img src='Печатная плата ATMega16 TQFP/Готовое устройство ATMega16 TQFP.jpg'><br><br>
-<img src='Печатная плата ATMega16 TQFP/Схема ATMega16.png'><br><br>
+<img src='ready1.jpg'><br><br>
+<img src='ready2.jpg'><br><br>
+<img src='circuit.png'><br><br>
 
 <h2>Установка</h2>
 
@@ -44,6 +50,7 @@
 
 <h2>Корректировка раскладки перед компиляцией</h2>
 
-<p>Программа "Настройка раскладки" позволяет создать свою привязку клавиш. Программа формирует массив чисел, который необходимо вставить в исходные коды.</p>
+<p>Программа "setup_key_bindings" позволяет создать свою привязку клавиш. Программа формирует массив чисел, который необходимо вставить в исходные коды.</p>
 
-
+</body>
+</html>
