--- a/orion_128/my_extensions/ps2_keyboard_atmega16/setup_key_bindings/setup_key_bindings.html
+++ b/orion_128/my_extensions/ps2_keyboard_atmega16/setup_key_bindings/setup_key_bindings.html
@@ -1,3 +1,9 @@
+<html lang="ru">
+<head>
+<meta charset="windows-1251">
+</head>
+<body> 
+
 <style>
 .btnPC,.btnRK {
   font-size : 12px;
@@ -161,8 +167,8 @@ function updateMap() {
   document.getElementById('map').value = s;
 }
 
-// 26-03-2012 vinxru
-// Версия 2 от 27-03-2012
+// 26-03-2012 aleksey.f.morozov@gmail.com
 </script>
 
-<img style='position:absolute;top:810px' border="0" src="http://www.warlog.ru/counter/?i=3003"/>
+</body>
+</html>
