--- a/Apogey_BK01C/my_emulator.html/russian.html
+++ b/Apogey_BK01C/my_emulator.html/russian.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 </head>
 <body onload="apogeeBk01Emu()" style="-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;-o-user-select: none;user-select: none;"> 
-
+<h1>Online эмулятор Апогей БК01Ц</h1>
 <style>
 #loadmenu {
     margin: 8px;
