--- a/UT-88/8bit_font_editor.html/russian.html
+++ b/UT-88/8bit_font_editor.html/russian.html
@@ -74,9 +74,7 @@
 </style>
 </head>
 <body>
-<script language="JavaScript">document.deep=2;</script>
-<script language="JavaScript" src="../../common.js"></script>
-<script language="JavaScript">makeComp();</script>
+<h1>Online редактор шрифтов</h1>
 <div id="fontEditMenu"
 ><a onclick="newFont()" style="background-image:url(icons/new.svg)">New font</a
 ><a onclick="loadFromServer(event)" style="background-image:url(icons/open.svg)"><div id="loadFromServerMenu"></div>Load file from server</a
