--- a/UT-88/how_do_i_build.html/russian.html
+++ b/UT-88/how_do_i_build.html/russian.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+<h1>Как я собирал ЮТ-88.</h1>
 <script>
 function h2(title) {
     document.write('<div class="h2">' + title + '</div>');
