--- a/Iskra_1080_Tartu/russian.basic_codes.html
+++ b/Iskra_1080_Tartu/russian.basic_codes.html
@@ -12,6 +12,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+<h1>Искра 1080 Тарту. Коды команд Бейсика.</h1>
 <table class="tbl2">
 <tr><td>80h</td><td>CLS</td><td>Очистить первый битвый план экрана</td></tr>
 <tr><td>81h</td><td>REM</td><td>Комментарий</td></tr>
