--- a/UT-88/how_do_i_build.html/russian.html
+++ b/UT-88/how_do_i_build.html/russian.html
@@ -3,17 +3,12 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h1>Как я собирал ЮТ-88.</h1>
+<h1>Как я собирал ЮТ-88</h1>
 <script>
-function h2(title) {
-    document.write('<div class="h2">' + title + '</div>');
-}
 function photo(url) {
-    document.write('<a  target="_blank" href="' + url + '"><img style="max-width: 100%;" src="' + url + '"></a>');
+    document.write('<a target="_blank" href="' + url + '"><img style="max-width: 100%;" src="' + url + '"></a>');
 }
 </script>
-
-<div class="column">
 
 <p>В 80-х годах в журналах СССР печатались схемы компьютеров для самостоятельной сборки. Это были очень простые компьютеры, которые были больше предназначены не для игры или работы, а для обучению цифровой схемотехнике. Сейчас эту нишу занимает Arduino и более современные микроконтроллеры. Схемы и описание компьютера «ЮТ-88» были напечатаны в 1989 году в журнале «ЮТ для умелых рук» («Левша», приложение к журналу «Юный техник», 1989 год, № 2-8). А позже еще в нескольких книжках. По одной из таких книг я и буду собирать этот компьютер.</p>
 
@@ -66,7 +61,7 @@ jmp start
 
 <script>photo("build8.jpg");</script>
 
-<script>h2("День 2");</script>
+<h2>День 2</h2>
 
 <p>Теперь у компьютера есть оперативная память. Я спаял модуль динамического ОЗУ. Динамическое ОЗУ создает много помех по питанию. Из-за этих помех компьютер может глючить и перезагружаться. Самое время впаять в плату много конденсаторов, которые будут подавлять эти помехи. Так как я собираю ретро компьютер, я решил использовать ретро конденсаторы. Это драгоценные конденсаторы, которые можно сдать в пункт приёма и выручить денег на пару пару бутылок водки и блок сигарет.</p>
 
@@ -94,7 +89,7 @@ jmp start
 
 <script>photo("build16.jpg");</script>
 
-<script>h2("День 3");</script>
+<h2>День 3</h2>
 
 <p>Компьютер ЮТ-88 подключался к телевизору, как и почти все восьмибитные компьютеры.</p>
 
@@ -148,7 +143,7 @@ jmp start
 
 <script>photo("build22.jpg");</script>
 
-<script>h2("День 4");</script>
+<h2>День 4</h2>
 
 <p>Прошлый день сборки закончился тем, что пара купленных мной микросхем К155ИМ3 оказались неисправными. Микросхема К155ИМ3 это 4-х битный сумматор, который используется в схеме формирования строчного синхроимпульса. Строчный синхроимпульс это сигнал, который объясняет телевизору, где в передаваемом видеосигнале находятся начала строк. Схема эта работает не совсем правильно, поэтому её все равно надо было бы переделывать, поэтому я решил переделать схему без использования этой микросхемы.</p>
 
@@ -238,7 +233,7 @@ jmp start
 
 <script>photo("build38.png");</script>
 
-<script>h2("День 5");</script>
+<h2>День 5</h2>
 
 <p>В прошлый день сборки я установил ПЗУ содержащую изображения символов, т.н. знакогенератор. В качестве ПЗУ знакогенератора авторы использовали микросхему К573РФ2. В те времена эта микросхема использовалась во многих компьютерах: Специалист, Радио 86РК и даже в Пентагоне 128. Эта микросхема мне часто нужна для ремонта и сборки. И что самое печальное, эта микросхема очень часто выходит из строя при перепрограммировании. Поэтому у меня она в дефиците. ПЗУ же большего размера бесполезно лежат у меня в коробочке. Поэтому я заменил КР573РФ2 размером 2 Кб на КР573РФ4 размером 8 Кб. А точнее на её зарубежный аналог выпаянный из платы убитого компьютера Корвет ПК8010. Т.е. микросхема вполне доступная в то время.</p>
 
@@ -276,7 +271,7 @@ jmp start
 
 <script>photo("build42.jpg");</script>
 
-<script>h2("День 6");</script>
+<h2>День 6</h2>
 
 <p>А теперь настало время клавиатуры. Вот схема из журнала. Сразу выкидываем логические элементы из схемы клавиатуры. Они тут не нужны.</p>
 
@@ -336,7 +331,7 @@ jmp start
 
 <script>photo("build55.jpg");</script>
 
-<script>h2("День 7");</script>
+<h2>День 7</h2>
 
 <p>Долгожданный запуск компьютера! Ура, работает!</p>
 
@@ -384,7 +379,7 @@ jmp start
 
 <p>Советские электролитические конденсаторы я не пытался искать. В магазинах их уже не найти, а идти на рынок и копаться в грязи с тестером мне крайне лень. Зато все остальные детали аутентичные. Куча красивых советских диодов КД202, пленочные конденсаторы, ферритовое кольцо, выключатель, держатель предохранителя.</p>
 
-<script>h2("День 8");</script>
+<h2>День 8</h2>
 
 <p>Корпус компьютера я сделал из того же дерева, что и клавиатуру. Из бука. И так же покрыл специальным маслом.</p>
 
@@ -416,7 +411,7 @@ jmp start
 
 <p>Корпус компьютера сверху закрывается прозрачным оргстеклом.</p>
 
-<script>h2("День 9");</script>
+<h2>День 9</h2>
 
 <p>Я подготовил архив, в котором:</p>
 
@@ -440,23 +435,21 @@ jmp start
 
 <p><a href="doc/%D0%AE%D0%A2-88_%D0%A1%D1%85%D0%B5%D0%BC%D1%8B_%D0%BF%D1%80%D0%BE%D1%88%D0%B8%D0%B2%D0%BA%D0%B8_%D0%B2%D0%B0%D1%80%D0%B8%D0%B0%D0%BD%D1%82%D0%B0_alemorf.7z">Скачать всю информацию по этому ЮТ-88</a></p>
 
-<script>h2("Схема модуля процессора, пзу, динамической памяти и клавиатуры.");</script>
+<h2>Схема модуля процессора, пзу, динамической памяти и клавиатуры.</h2>
 
 <script>photo("cpu_rom_ram_ports_circuit.png");</script>
 
-<script>h2("Схема видеоадаптера.");</script>
+<h2>Схема видеоадаптера.</h2>
 
 <script>photo("video_circuit.png");</script>
 
-<script>h2("Схема блока питания.");</script>
+<h2>Схема блока питания.</h2>
 
 <script>photo("power_unit_circuit.png");</script>
 
-<script>h2("Шрифт 6x10.");</script>
+<h2>Шрифт 6x10.</h2>
 
 <script>photo("build71.png");</script>
-
-</div>
 
 </body>
 </html>
