--- a/Iskra_1080_Tartu/russian.io_ports.html
+++ b/Iskra_1080_Tartu/russian.io_ports.html
@@ -45,18 +45,18 @@
   </tr>
   <tr>
     <td>С39</td>
-    <td>90h - 93h (94h - 97h)</td>
+    <td>90h - 93h (94h - 97h, 0D0h - 0D7h)</td>
     <td>Установка палитры. 90h - 93h соответствуют цветам 0 - 3, 94h - 97h тоже соответствуют цветам 0 - 3 из-за неполной дешифрации адресов. При записи в порт старшие 4 бита игнорируются. Соответствия записываемых значений цветам: 0 - белый, 1 - голубой, 2 - фиолетовый, 3 - синий, 4 - желтый, 5 - зеленый, 6 - красный, 7 - неизвестно, 8 - темно-серый, 9 - темно-голубой, 10 - темно-розовый, 11 - темно-синий, 12 - темно-желтый, 14 - темно-зеленый, 15 - черный.
     </td>
   </tr>
   <tr>
     <td>С40</td>
-    <td>98h (9Ah, 9Ch, 9Eh)</td>
+    <td>98h (9Ah, 9Ch, 9Eh, 0D8h, 0DAh, 0DCh, 0DEh)</td>
     <td>Чтение с контактов ID0 - ID7 внешнего порта</td>
   </tr>
   <tr>
     <td>C40</td>
-    <td>99h (9Bh, 9Dh, 9Fh)</td>
+    <td>99h (9Bh, 9Dh, 9Fh, 0D9h, 0DBh, 0DDh, 0DFh)</td>
     <td>
       Чтение бита 0 - Чтение с магнитной ленты.<br>
       Чтение бит 1 - 7 - Чтение с контактов ID1-2 - ID7-2 внешнего порта.
@@ -64,18 +64,19 @@
   </tr>
   <tr>
     <td>C41</td>
-    <td>0A0h (0A1h - 0A7h)</td>
-    <td>Однократная запись в этот порт аналогична последовательной записи в 8 регистров 0B8h - 0BFh.</td>
+    <td>0A0h (0A1h - 0A7h, 0E0h - 0E7h)</td>
+    <td>Однократная запись в этот порт аналогична последовательной записи в 8 регистров 0B8h - 0BFh.
+    Разрешает выходы CU0-CU3.</td>
   </tr>
   <tr>
     <td>C42</td>
-    <td>0A8h (0A9h - 0AFh)</td>
+    <td>0A8h (0A9h - 0AFh, 0E8h - 0EFh)</td>
     <td>Биты 0 - 6 - Инорируются.<br>
-    Биты 7 - Подключить ПЗУ к адресам 0..0FFh.</td>
+    Бит 7 - Подключить ПЗУ к адресам 0..0FFh.</td>
   </tr>
   <tr>
     <td>C44</td>
-    <td>0B0h (0B1h - 0B7h)</td>
+    <td>0B0h (0B1h - 0B7h, 0F0h - 0F7h)</td>
     <td>Вывод на магнитофон и встроенный динамик. При записи любого значения, напряжение на разъеме МГ изменяется на противоположное.</td>
   </tr>
 
@@ -100,7 +101,7 @@
   <tr>
     <td>RG4</td>
     <td>0BBh</td>
-    <td>Неизвестно.</td>
+    <td>Выбор скорости UART.</td>
   </tr> 
   <tr>
     <td>RG5</td>
@@ -131,7 +132,7 @@
 
   <tr>
     <td></td>
-    <td>0C8h - 0F7h</td>
+    <td>0C8h - 0CFh</td>
     <td>Неизвестно.</td>
   </tr>
 
@@ -153,7 +154,7 @@
   <tr>
     <td>RG4</td>
     <td>0FBh</td>
-    <td>Неизвестно.</td>
+    <td>Выбор скорости UART.</td>
   </tr> 
   <tr>
     <td>RG5</td>
