--- a/Iskra_1080_Tartu/russian.io_ports.html
+++ b/Iskra_1080_Tartu/russian.io_ports.html
@@ -1,4 +1,4 @@
-<html lang="ru">
+<html lang="ru">^
 <head>
 <style>
 .tbl2 {
@@ -72,7 +72,7 @@
     <td>C42</td>
     <td>0A8h (0A9h - 0AFh, 0E8h - 0EFh)</td>
     <td>Биты 0 - 6 - Инорируются.<br>
-    Бит 7 - Подключить ПЗУ к адресам 0..0FFh.</td>
+    Бит 7 - Подключить ОЗУ к адресам 0..0FFh.</td>
   </tr>
   <tr>
     <td>C44</td>
@@ -96,7 +96,7 @@
   <tr>
     <td>RG3</td>
     <td>0BAh</td>
-    <td>Выбор ПЗУ с программным кодом по адресам 0С000h - 0С7FFh. К адресам 0С000h - 0С7FFh прикреплены сразу две ПЗУ. Я их назвал "со знакогенератором" и "с программным кодом".</td>
+    <td>Выбор ПЗУ с программным кодом по адресам 0С000h - 0СFFFh. К адресам 0С000h - 0СFFFh прикреплены сразу две ПЗУ. Я их назвал "со знакогенератором" и "с программным кодом".</td>
   </tr>
   <tr>
     <td>RG4</td>
@@ -149,7 +149,7 @@
   <tr>
     <td>RG3</td>
     <td>0FAh</td>
-    <td>Выбор ПЗУ со знакогенератором по адресам 0С000h - 0С7FFh.</td>
+    <td>Выбор ПЗУ со знакогенератором по адресам 0С000h - 0СFFFh.</td>
   </tr>
   <tr>
     <td>RG4</td>
