--- a/Iskra_1080_Tartu/russian.basic_codes.html
+++ b/Iskra_1080_Tartu/russian.basic_codes.html
@@ -14,7 +14,7 @@
 <body>
 <h1>Искра 1080 Тарту. Коды команд Бейсика.</h1>
 <table class="tbl2">
-<tr><td>80h</td><td>CLS</td><td>Очистить первый битвый план экрана</td></tr>
+<tr><td>80h</td><td>CLS</td><td>Очистить экран</td></tr>
 <tr><td>81h</td><td>REM</td><td>Комментарий</td></tr>
 <tr><td>82h</td><td>LIST</td><td>Вывести программу на экран</td></tr>
 <tr><td>83h</td><td>RUN</td><td>Запустить программу</td></tr>
