--- a/Iskra_1080_Tartu/my_emulator.html/russian.html
+++ b/Iskra_1080_Tartu/my_emulator.html/russian.html
@@ -79,6 +79,7 @@ body {
 </style>
 </head>
 <body>
+<h1>Эмулятор Искра 1080 Тарту</h1>
 <script src="disk0.js" type="application/javascript"></script>
 <script src="iskra1080rom.js" type="application/javascript"></script>
 <script src="filelist.js" type="application/javascript"></script>
