--- a/Iskra_1080_Tartu/russian.i8080.html
+++ b/Iskra_1080_Tartu/russian.i8080.html
@@ -42,10 +42,10 @@
     <td>HL</td>
   </tr>
   <tr>
-    <td colspan="3"><p>PC (счётчик команд)</p></td>
+    <td colspan="3">PC (счётчик команд)</td>
   </tr>
   <tr>
-    <td colspan="3"><p>SP (указатель стека)</p></td>
+    <td colspan="3">SP (указатель стека)</td>
   </tr>
 </table>
 
